Remove Lovable branding from meta tags

--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>KitchenAI Assistant</title>
-    <meta name="description" content="KitchenAI Assistant" />
-    <meta name="author" content="Lovable" />
+    <title>KitchenAI Assistant - Smart Recipe Discovery & Inventory Management</title>
+    <meta name="description" content="Discover recipes based on your ingredients, manage your kitchen inventory, and get personalized cooking recommendations with AI-powered assistance." />
+    <meta name="author" content="KitchenAI" />
 
     <meta property="og:title" content="KitchenAI Assistant" />
-    <meta property="og:description" content="KitchenAI Assistant" />
+    <meta property="og:description" content="Discover recipes based on your ingredients, manage your kitchen inventory, and get personalized cooking recommendations." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:url" content="https://cooking-assistant-web-app.vercel.app/" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:title" content="KitchenAI Assistant" />
+    <meta name="twitter:description" content="Smart recipe discovery and kitchen inventory management" />
   </head>
 
   <body>
